<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ImageDetailActivity"
    android:background="@color/colorPrimary">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_image_detail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Height_image_detail"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsin_toolbar_image_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary">

            <ImageView
                android:id="@+id/image_image_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@drawable/m1"
                app:layout_collapseMode="parallax"></ImageView>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_image_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:layout_collapseMode="pin"></androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/username_image_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textView_username_image_detail"
                    android:text="@string/masha_oso_cardview"
                    android:layout_marginTop="@dimen/marginTop_image_detail"
                    android:paddingLeft="@dimen/padding_card"
                    android:paddingRight="@dimen/padding_card"></TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/padding_card"
                    android:paddingLeft="@dimen/padding_card"
                    android:paddingRight="@dimen/padding_card">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textSize_megusta_image_detail"
                        android:text="@string/text_cantidad_megusta_image_detail"></TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textSize_megusta_image_detail"
                        android:layout_marginLeft="@dimen/marginLeft_megusta_image_detail"
                        android:text="@string/text_megusta_image_detail"></TextView>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_divider_image_detail"
                    android:background="@color/black"></View>
                <TextView
                    android:id="@+id/title_image_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize_tittle_image_detail"
                    android:text="@string/text_tittle_image_detail"
                    android:textStyle="bold"
                    android:paddingTop="@dimen/paddingTop_tittle_image_detail"
                    android:layout_gravity="center_horizontal"></TextView>

                <TextView
                    android:id="@+id/content_image_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize_tittle_image_detail"
                    android:text="@string/text_cotent_image_detail"
                    android:paddingTop="@dimen/paddingTop_tittle_image_detail"
                    android:paddingLeft="@dimen/paddingTop_tittle_image_detail"
                    android:paddingRight="@dimen/paddingTop_tittle_image_detail"
                    android:layout_gravity="center_horizontal"></TextView>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_image_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/heart"
        app:layout_anchor="@id/image_image_detail"
        app:layout_anchorGravity="bottom| end "
        android:layout_marginEnd="@dimen/marginEnd_fab_image_detail"
        ></com.google.android.material.floatingactionbutton.FloatingActionButton>
</androidx.coordinatorlayout.widget.CoordinatorLayout>